--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build MHC_ASPNetCore.sln --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
