--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,13 @@ variables:
 steps:
 - script: dotnet build MHC_ASPNetCore.sln --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+steps:
+- powershell: .\build.ps1
+- task: CopyFiles@2
+  inputs:
+    contents: _buildOutput\**
+    targetFolder: $(Build.ArtifactStagingDirectory)
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: $(Build.ArtifactStagingDirectory)
+    artifactName: MyBuildOutputs
