--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,10 @@ variables:
 
 steps:
 - script: dotnet build MHC_ASPNetCore.sln --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+  displayName: 'dotnet publish -o dist $(buildConfiguration)'
 - task: CopyFiles@2
   inputs:
-    contents: _buildOutput\**
+    contents: dist\**
     targetFolder: $(Build.ArtifactStagingDirectory)
 - task: PublishBuildArtifacts@1
   inputs:
